<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ettibox</string>


<!-- DetailView -->
    <string name="title_item_detail">Item Detail</string>
    <string name="detail_preview_picture_description">Preview Picture</string>
    <string name="detail_size">Size: %s</string>
    <string name="detail_name">Name: %s</string>
    <string name="detail_download">Downoad</string>
    <string name="detail_open">Open</string>
    <string name="detail_preview">Preview</string>
    <string name="detail_sync_subscription">Synchronize</string>

<!--     Download Service -->
    <string name="download_service_notification_ticker_text">Download started</string>
    <string name="download_service_notification_title">Download</string>
    <string name="download_service_notification_message">Download in progress</string>
    
<!--     Upload Service -->
    <string name="upload_service_notification_ticker_text">Upload started</string>
    <string name="upload_service_notification_title">Upload</string>
    <string name="upload_service_notification_message">Upload in progress</string>
    <string name="upload_service_no_network_available">No Network available</string>
    
    
<!--     Menue actions -->
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete">Delete</string>
    <string name="action_create_folder">Create Folder</string>

<!-- Upload Activity  -->
    <string name="title_activity_upload">UploadActivity</string>
    
<!--     ListView Row -->
    <string name="list_row_file_icon">Icon of File/Folder</string>
	<string name="list_row_sync_icon">Icon indicating Synchronisation Status</string>
	<string name="list_row_file_titel_predefined">Title</string>
	<string name="list_row_file_date_predefined">Date and Time</string>
	<string name="list_row_arrow_right">Arrow right</string>
	 
	 
</resources>
